# projects

./: .gitignore  .pre-commit-config.yaml
quebec_hazards/: README.md  pyproject.toml
quebec_hazards/hazards/: README.md
quebec_hazards/hazards/src/components/: fires.py
quebec_hazards/hazards/src/visuals/: maps.py
quebec_hazards/streamlit/: app.py
quebec_hazards/streamlit/components/: page_config.py
quebec_hazards/tests/: conftest.py  test__data_sources.py
